style about page more; fix mobile about intro text overflow by setting main width to 100%

--- a/styles/about.css
+++ b/styles/about.css
@@ -9,9 +9,20 @@ body {
 /* The intro ... */
 .intro {
   padding: 12px;
+  /* display: block; */
+  /* overflow-wrap: break-word; */
+}
+
+.intro p {
+  /* font-size: 16px; */
+  /* width: auto; */
+  /* display: block; */
+  /* overflow-wrap: break-word; */
 }
 
 .experiences-both {
+  width: 100%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,7 +46,7 @@ h2 {
 
 .item-date {
   /* padding: 12px 0 4px; */
-  padding-top: 12px;
+  padding-top: 16px;
   /* border-bottom: 1px solid black; */
 
   display: flex;
@@ -44,7 +55,7 @@ h2 {
 
 .item-details {
   margin-bottom: 12px 0 12px;
-  padding: 12px 0;
+  padding: 4px 0;
   width: 100%;
 
   display: flex;
@@ -125,9 +136,30 @@ h2 {
 @media screen and (min-width: 992px) {
   .experiences-both {
     flex-direction: row;
+    justify-content: center;
     flex-wrap: wrap;
   }
+
+  .experience {
+    border-top: none;
+    max-width: 30%;
+  }
+
   .academia {
     border-right: 1px solid black;
+    margin-right: 0;
+    margin-bottom: 8px;
+    padding-right: 24px;
+    padding-bottom: 32px;
+  }
+
+  .employment {
+    margin-left: 0;
+    padding-left: 0;
+  }
+
+  .resume {
+    border: none;
+    /* padding: 20px; */
   }
 }
