--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
 body {
   padding: 24px;
   background-image: url(../images/forest1.png);
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.8);
   background-blend-mode: lighten;
   /* background-size: auto; */
   /* background-repeat: no-repeat; */
@@ -57,6 +57,8 @@ nav a:focus  */ {
 
 /* The main ... */
 main {
+  width: 100%;
+  
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -69,6 +71,18 @@ main {
   flex-direction: column;
   height: fit-content;
   width: 100%;
+  max-width: 100%;
+}
+
+.intro p {
+  margin: 20px 0 0;
+  padding: 12px 0 0;
+  font-size: 20px;
+  text-align: center;
+  /* height: fit-content; */
+  width: 100%;
+  max-width: 100%;
+
 }
 
 h1 {
@@ -88,13 +102,6 @@ h2 {
 h3 {
   font-size: large;
   font-weight: lighter;
-  text-align: center;
-}
-
-.intro p {
-  margin: 20px 0 0;
-  padding: 12px 0 0;
-  font-size: 20px;
   text-align: center;
 }
 
